--- a/dest/index.html
+++ b/dest/index.html
@@ -156,38 +156,12 @@
         <div class="home-watch">
           <div class="home-watch__caption">Смарт-часы для</div>
           <div class="home-watch__title">Жизни <span>и спорта.</span></div>
-          <div class="home-watch__slider">
-            <div class="swiper-wrapper">
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_0.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_1.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_2.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_3.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_4.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_5.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_3.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-              <div class="home-watch__card swiper-slide">
-                <div class="home-watch__img--wrap"><img class="home-watch__img" src="img/content/home-watch/item_1.png" width="310" height="310" alt="Name watch"></div>
-              </div>
-            </div>
+          <div class="home-watch__img--wrap">
+            <picture>
+              <source srcset="img/content/home-watch/desktop.png" media="(min-width: 580px)"><img src="img/content/home-watch/mobile.png" width="343" height="748" alt="Watch image">
+            </picture>
           </div>
-          <div class="slider-nav home-watch__slider-nav">
-            <button class="btn btn--reset slider-arrow slider-arrow-prev" aria-label="Prev slide"></button>
-            <button class="btn btn--reset slider-arrow slider-arrow-next" aria-label="Next slide"></button>
-          </div>
+          <div class="home-watch__nav"><a class="btn btn--reset home-watch__btn" href="#" title="Go to Watch page"></a></div>
         </div>
       </section>
       <section class="section section--margin-big">
@@ -205,17 +179,20 @@
         </div>
         <div class="home-catalog">
           <div class="home-catalog__row">
-            <div class="category"><a class="category__body" href="#category">
-                <div class="category__img--wrap"><img class="category__img" src="img/content/home-catalog/category_0.png" width="640" height="444" alt="Name category"></div>
+            <div class="category">
+              <div class="category__body"> <a class="category__link" href="#category" title="Go to category"></a>
+                <div class="category__img--wrap" style="background: #F0EEF7"><img class="category__img" src="img/content/home-catalog/category_0.png" width="640" height="444" alt="Name category"></div>
                 <div class="category__content">
                   <div class="category__info">
                     <div class="category__title">Серия смарт-часов</div>
                   </div>
                   <div class="btn btn--reset category__btn"></div>
-                </div></a></div>
+                </div>
+              </div>
+            </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_0.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/home-catalog/product_0.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">Chrono pro</div>
                   <div class="product__price price">
@@ -226,7 +203,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_1.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_1.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">Watch Lite</div>
                   <div class="product__price price">
@@ -237,7 +214,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product">
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product">
                   <ul class="product__colors-list">
                     <li class="product__colors-item" style="background:#99b6ee;"></li>
                     <li class="product__colors-item" style="background:#ffcbdb;"></li>
@@ -254,7 +231,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product">
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product">
                   <ul class="product__colors-list">
                     <li class="product__colors-item" style="background:#99b6ee;"></li>
                     <li class="product__colors-item" style="background:#717171;"></li>
@@ -268,17 +245,20 @@
                 </div>
               </div>
             </div>
-            <div class="category"><a class="category__body" href="#category">
+            <div class="category">
+              <div class="category__body"><a class="category__link" href="#category" title="Go to category"></a>
                 <div class="category__img--wrap"><img class="category__img" src="img/content/home-catalog/category_1.png" width="640" height="444" alt="Name category"></div>
                 <div class="category__content">
                   <div class="category__info">
                     <div class="category__title">Коллекция детских устройств</div>
                   </div>
                   <div class="btn btn--reset category__btn"></div>
-                </div></a></div>
+                </div>
+              </div>
+            </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_4.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_4.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">KidGram Watch</div>
                   <div class="product__price price">
@@ -289,7 +269,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_5.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_5.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">4G Techo</div>
                   <div class="product__price price">
@@ -300,7 +280,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_6.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_6.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">4G Techo</div>
                   <div class="product__price price">
@@ -311,7 +291,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_7.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_7.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">4G Techo</div>
                   <div class="product__price price">
@@ -320,17 +300,20 @@
                 </div>
               </div>
             </div>
-            <div class="category"><a class="category__body" href="#category">
+            <div class="category">
+              <div class="category__body"><a class="category__link" href="#category" title="Go to category"></a>
                 <div class="category__img--wrap"><img class="category__img" src="img/content/home-catalog/category_2.png" width="640" height="444" alt="Name category"></div>
                 <div class="category__content">
                   <div class="category__info">
                     <div class="category__title">Умные гаджеты для жизни</div>
                   </div>
                   <div class="btn btn--reset category__btn"></div>
-                </div></a></div>
+                </div>
+              </div>
+            </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_8.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F3F1F0"><img class="product__img" src="img/content/home-catalog/product_8.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">Chrono pro</div>
                   <div class="product__price price">
@@ -341,7 +324,7 @@
             </div>
             <div class="product">
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-                <div class="product__img--wrap"><img class="product__img" src="img/content/home-catalog/product_9.png" width="213" height="213" alt="Name product"></div>
+                <div class="product__img--wrap" style="background: #F3F1F0"><img class="product__img" src="img/content/home-catalog/product_9.png" width="213" height="213" alt="Name product"></div>
                 <div class="product__info">
                   <div class="product__title">Watch Lite</div>
                   <div class="product__price price">
@@ -493,5 +476,9 @@
     </footer>
     <script src="libs/swiper/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script>
+      if (CSS && 'paintWorklet' in CSS) CSS.paintWorklet.addModule('scripts/paint.js');
+      
+    </script>
   </body>
 </html>
