--- a/dest/index.html
+++ b/dest/index.html
@@ -72,37 +72,53 @@
         <div class="home-categories">
           <div class="home-categories__row">
             <div class="hero-category">
-              <div class="hero-category__body" style="background: linear-gradient(360deg, #f7f7fa 0%, #a4c7ff 100%);">
+              <div class="hero-category__body">
                 <div class="hero-category__name">Детские часы</div>
                 <div class="hero-category__desc">Гаджеты, делающие детство умнее и&nbsp;безопаснее.</div>
                 <div class="hero-category__nav"><a class="btn btn--border-accent hero-category__btn" href="#">Подробнее</a></div>
-                <div class="hero-category__img--wrap"><img class="hero-category__img" src="img/content/home-categories/img_0.png" width="528" height="328" alt="Name cateogory"></div>
+                <div class="hero-category__img--wrap">
+                  <picture>
+                    <source srcset="img/content/home-categories/img_0-desktop.png" media="(min-width: 768px)"><img src="img/content/home-categories/img_0-mobile.png" width="528" height="328" alt="Name cateogory">
+                  </picture>
+                </div>
                 <div class="hero-category__label">
                    Новая модель<span class="hero-category__label-sticker"><img src="img/content/home-categories/sticker.svg" width="18" height="18" alt="KidGram Watch">KidGram Watch</span></div>
               </div>
             </div>
             <div class="hero-category">
-              <div class="hero-category__body" style="background: linear-gradient(0deg, #f7f7fa 0%, #f2edff 100%);">
+              <div class="hero-category__body">
                 <div class="hero-category__name">Детские гаджеты</div>
                 <div class="hero-category__desc">Безопасность и&nbsp;забота для&nbsp;вашего малыша.</div>
                 <div class="hero-category__nav"><a class="btn btn--border-accent hero-category__btn" href="#">Подробнее</a></div>
-                <div class="hero-category__img--wrap"><img class="hero-category__img" src="img/content/home-categories/img_1.png" width="528" height="328" alt="Name cateogory"></div>
+                <div class="hero-category__img--wrap">
+                  <picture>
+                    <source srcset="img/content/home-categories/img_1-desktop.png" media="(min-width: 768px)"><img src="img/content/home-categories/img_1-mobile.png" width="528" height="328" alt="Name cateogory">
+                  </picture>
+                </div>
               </div>
             </div>
             <div class="hero-category -wide-">
-              <div class="hero-category__body" style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.5) 0%, #e5e2f4 100%);">
+              <div class="hero-category__body">
                 <div class="hero-category__name">Cмарт-часы</div>
                 <div class="hero-category__desc">Технологии и&nbsp;стиль на&nbsp;вашем запястье.</div>
                 <div class="hero-category__nav"><a class="btn btn--border-accent hero-category__btn" href="#">Подробнее</a></div>
-                <div class="hero-category__bg--wrap"><img class="hero-category__bg" src="img/content/home-categories/bg_0.png" width="528" height="328" alt="Name cateogory"></div>
+                <div class="hero-category__img--wrap">
+                  <picture>
+                    <source srcset="img/content/home-categories/img_2-desktop.png" media="(min-width: 768px)"><img src="img/content/home-categories/img_2-mobile.png" width="528" height="328" alt="Name cateogory">
+                  </picture>
+                </div>
               </div>
             </div>
             <div class="hero-category -wide- -strange-">
-              <div class="hero-category__body" style="background: linear-gradient(180deg, rgba(152, 223, 245, 0.2) 0%, rgba(152, 223, 245, 0.2) 100%);">
+              <div class="hero-category__body">
                 <div class="hero-category__name">Веллнес девайсы</div>
                 <div class="hero-category__desc">Наши умные устройства позаботятся о&nbsp;вашем здоровье.</div>
                 <div class="hero-category__nav"><a class="btn btn--border-accent hero-category__btn" href="#">Подробнее</a></div>
-                <div class="hero-category__img--wrap"><img class="hero-category__img" src="img/content/home-categories/img_2.png" width="528" height="328" alt="Name cateogory"></div>
+                <div class="hero-category__img--wrap">
+                  <picture>
+                    <source srcset="img/content/home-categories/img_3-desktop.png" media="(min-width: 768px)"><img src="img/content/home-categories/img_3-mobile.png" width="528" height="328" alt="Name cateogory">
+                  </picture>
+                </div>
               </div>
             </div>
           </div>
