--- a/dest/index.html
+++ b/dest/index.html
@@ -28,17 +28,17 @@
   <body>
     <header class="header">
       <div class="container header__container">
-        <div class="header__row"><a class="header__logo" href="#"><img class="header__logo-img" src="img/icons/logo.svg" width="83" height="22" alt="Elari"></a>
+        <div class="header__row"><a class="header__logo" href="./"><img class="header__logo-img" src="img/icons/logo.svg" width="83" height="22" alt="Elari"></a>
           <nav class="header__nav">
             <ul class="header__nav-list">
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Детские часы</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Детские телефоны</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Фитнес-часы</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Аксессуары</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Акции</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Поддержка</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Доставка</a></li>
-              <li class="header__nav-item"><a class="header__nav-link" href="#">Контакты</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="catalog.html">Детские часы</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="catalog.html">Детские телефоны</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="catalog.html">Фитнес-часы</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="catalog.html">Аксессуары</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="catalog.html">Акции</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="support.html">Поддержка</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="delivery.html">Доставка</a></li>
+              <li class="header__nav-item"><a class="header__nav-link" href="contacts.html">Контакты</a></li>
             </ul>
           </nav>
           <div class="header__panel">
