--- a/dest/catalog.html
+++ b/dest/catalog.html
@@ -77,121 +77,205 @@
         <div class="catalog__row">
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/home-catalog/product_0.png" width="213" height="213" alt="Name product"></div>
-              <div class="product__info">
-                <div class="product__title">Chrono pro</div>
-                <div class="product__price price">
-                  <div class="price__current">5000 р</div>
-                </div>
+              <div class="product__labels">
+                <div class="product__labels-item -purple-">Новинка</div>
+                <div class="product__labels-item -green-">Хит продаж</div>
               </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_1.png" width="213" height="213" alt="Name product"></div>
-              <div class="product__info">
-                <div class="product__title">Watch Lite</div>
-                <div class="product__price price">
-                  <div class="price__current">5000 р</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background:#99b6ee;"></li>
-                  <li class="product__colors-item" style="background:#ffcbdb;"></li>
-                  <li class="product__colors-item" style="background:#717171;"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
                 </ul>
               </div>
               <div class="product__info">
                 <div class="product__title">KidGram Watch</div>
+                <div class="product__desc">Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров</div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                  <div class="price__current">7990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background:#99b6ee;"></li>
-                  <li class="product__colors-item" style="background:#717171;"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/red.jpg');"></li>
                 </ul>
               </div>
               <div class="product__info">
-                <div class="product__title">4G Techo</div>
+                <div class="product__title">KidPhone Fresh 4G</div>
+                <div class="product__desc">Яркие и надежные  4G смарт-часы с GPS, аудио-видеозвонками, голосовым чатом, и удобной зарядкой USB-C.          </div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                  <div class="price__current">6990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_4.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__labels">
+                <div class="product__labels-item -purple-">Новинка</div>
+              </div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product">
+                <ul class="product__colors-list">
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
+                </ul>
+              </div>
               <div class="product__info">
-                <div class="product__title">KidGram Watch</div>
+                <div class="product__title">KidPhone Techno 4G</div>
+                <div class="product__desc">Новые 4G/WiFi/GPS смарт-часы в стиле аниме с KidGram (Telegram с родительским контролем), другим контентом от VK, и...      </div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                  <div class="price__current">7490 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_5.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__labels">
+                <div class="product__labels-item -purple-">Новинка</div>
+                <div class="product__labels-item -green-">Хит продаж</div>
+              </div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product">
+                <ul class="product__colors-list">
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/purple.jpg');"></li>
+                </ul>
+              </div>
               <div class="product__info">
-                <div class="product__title">4G Techo</div>
+                <div class="product__title">4G Wink</div>
+                <div class="product__desc">Многофункциональные часы-телефон с самым большим экраном, современным развивающим контентом, заботой...       </div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                  <div class="price__current">8990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_6.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__labels">
+                <div class="product__labels-item -purple-">Новинка</div>
+                <div class="product__labels-item -blue-">Рекомендуем</div>
+              </div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product">
+                <ul class="product__colors-list">
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
+                </ul>
+              </div>
               <div class="product__info">
-                <div class="product__title">4G Techo</div>
+                <div class="product__title">KidPhone 4G Lite</div>
+                <div class="product__desc">Классический узнаваемый дизайн, усовершенствованные характеристики и комбо новых функций.</div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                  <div class="price__current">5990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_7.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__labels">
+                <div class="product__labels-item -purple-">Новинка</div>
+              </div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product">
+                <ul class="product__colors-list">
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/red.jpg');"></li>
+                </ul>
+              </div>
               <div class="product__info">
-                <div class="product__title">4G Techo</div>
+                <div class="product__title">Kidphone 4GR M</div>
+                <div class="product__desc">Наш бестселлер - 4G/GPS/Wi-Fi смарт-часы c мессенджером KidGram (Telegram с родительским контролем), Марусей и...</div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                  <div class="price__current">7990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F3F1F0"><img class="product__img" src="img/content/home-catalog/product_8.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__labels">
+                <div class="product__labels-item -purple-">Новинка</div>
+                <div class="product__labels-item -green-">Хит продаж</div>
+              </div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_6.png" width="213" height="213" alt="Name product"></div>
               <div class="product__info">
-                <div class="product__title">Chrono pro</div>
-                <div class="product__price price">
-                  <div class="price__current">5000 р</div>
+                <div class="product__title">KidPhone 4GR</div>
+                <div class="product__desc">Водонепроницаемые 4G часы-телефон с GPS/Wi-Fi-трекингом, MP3-плеером, Алисой от Яндекса и видеозвонками</div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F3F1F0"><img class="product__img" src="img/content/home-catalog/product_9.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product">
+                <ul class="product__colors-list">
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/purple-transparent.jpg');"></li>
+                </ul>
+              </div>
               <div class="product__info">
-                <div class="product__title">Watch Lite</div>
+                <div class="product__title">FixiTime Fun</div>
+                <div class="product__desc">Детские часы-телефон с трекингом, функцией SOS, камерой и защитой от влаги  </div>
                 <div class="product__price price">
-                  <div class="price__current">5000 р  </div>
+                  <div class="price__current">3990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="product">
+            <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
+              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product">
+                <ul class="product__colors-list">
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink-black.jpg');"></li>
+                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue-black.jpg');"></li>
+                </ul>
+              </div>
+              <div class="product__info">
+                <div class="product__title">KidPhone 2</div>
+                <div class="product__desc">Простая и функциональная модель часов-телефона с GPS и кнопкой SOS</div>
+                <div class="product__price price">
+                  <div class="price__current">3990 р</div>
+                </div>
+                <div class="product__nav">
+                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
                 </div>
               </div>
             </div>
