button pre-order

--- a/dest/catalog.html
+++ b/dest/catalog.html
@@ -234,6 +234,7 @@
                 <div class="product__desc">Водонепроницаемые 4G часы-телефон с GPS/Wi-Fi-трекингом, MP3-плеером, Алисой от Яндекса и видеозвонками</div>
                 <div class="product__nav">
                   <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <button class="btn product__preorder" data-modal="modal-preorder" aria-label="Open modal">Предзаказ</button>
                 </div>
               </div>
             </div>
@@ -254,7 +255,8 @@
                   <div class="price__current">3990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
+                  <div class="btn btn--border-accent product__btn">Подробнее</div>
+                  <button class="btn product__preorder" data-modal="modal-preorder" aria-label="Open modal">Предзаказ</button>
                 </div>
               </div>
             </div>
