--- a/dest/index.html
+++ b/dest/index.html
@@ -490,6 +490,24 @@
         </div>
       </div>
     </footer>
+    <div class="modal" id="modal-preorder">
+      <div class="modal__square">
+        <div class="modal__head">
+          <div class="modal__title">Предзаказ на товар</div>
+          <button class="btn btn--reset btn--cross modal__close" data-close-modal></button>
+        </div>
+        <div class="modal__body">
+          <form class="form modal__form" action="/" method="POST">
+            <div class="input">
+              <input class="input__elem" type="text" name="email" placeholder="Укажите ваш email">
+            </div>
+            <div class="form__footer">
+              <button class="btn btn--border-accent form__send" aria-label="Add pre-order">Оформить предзаказ</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
     <script src="libs/swiper/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
     <script>
