--- a/dest/catalog.html
+++ b/dest/catalog.html
@@ -83,7 +83,7 @@
               </div>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
                 </ul>
@@ -105,7 +105,7 @@
             <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/red.jpg');"></li>
                 </ul>
@@ -130,7 +130,7 @@
               </div>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
                 </ul>
               </div>
@@ -155,7 +155,7 @@
               </div>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/purple.jpg');"></li>
                 </ul>
               </div>
@@ -180,7 +180,7 @@
               </div>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
                 </ul>
               </div>
@@ -204,7 +204,7 @@
               </div>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/red.jpg');"></li>
                 </ul>
@@ -243,7 +243,7 @@
             <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/purple-transparent.jpg');"></li>
                 </ul>
@@ -265,7 +265,7 @@
             <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
               <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product">
                 <ul class="product__colors-list">
-                  <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink-black.jpg');"></li>
+                  <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/pink-black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue-black.jpg');"></li>
                 </ul>
               </div>
