--- a/dest/index.html
+++ b/dest/index.html
@@ -232,9 +232,9 @@
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
                 <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product">
                   <ul class="product__colors-list">
-                    <li class="product__colors-item" style="background:#99b6ee;"></li>
-                    <li class="product__colors-item" style="background:#ffcbdb;"></li>
-                    <li class="product__colors-item" style="background:#717171;"></li>
+                    <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
+                    <li class="product__colors-item" style="background-image: url('img/content/product-colors/black.jpg');"></li>
+                    <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
                   </ul>
                 </div>
                 <div class="product__info">
@@ -249,8 +249,9 @@
               <div class="product__body"><a class="product__link" href="#product" title="Go to product"></a>
                 <div class="product__img--wrap" style="background: #F8F5F8"><img class="product__img" src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product">
                   <ul class="product__colors-list">
-                    <li class="product__colors-item" style="background:#99b6ee;"></li>
-                    <li class="product__colors-item" style="background:#717171;"></li>
+                    <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
+                    <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
+                    <li class="product__colors-item" style="background-image: url('img/content/product-colors/red.jpg');"></li>
                   </ul>
                 </div>
                 <div class="product__info">
